backend/src/main/java/com/example/aiverse/common/error/ErrorCode.java
package com.example.aiverse.common.error;

import org.springframework.http.HttpStatus;

public interface ErrorCode {

    String code();

    String message();

    HttpStatus status();
}
